--- a/fontbakery/googlefonts-NotoSansKhudawadi-report.html
+++ b/fontbakery/googlefonts-NotoSansKhudawadi-report.html
@@ -69,53 +69,28 @@
                 <th>⚠️ WARN</th>
                 <th>⏩ SKIP</th>
                 <th>ℹ️ INFO</th>
-                <th>✔️ PASS</th>
+                <th>✅ PASS</th>
             </tr>
             <tr>
                 <td>0</td>
-                <td>6</td>
-                <td>5</td>
-                <td>115</td>
-                <td>8</td>
-                <td>101</td>
+                <td>2</td>
+                <td>4</td>
+                <td>110</td>
+                <td>7</td>
+                <td>104</td>
             </tr>
             <tr>
                 <td>0%</td>
-                <td>3%</td>
-                <td>3%</td>
+                <td>1%</td>
+                <td>2%</td>
                 <td>65%</td>
                 <td>4%</td>
-                <td>57%</td>
+                <td>62%</td>
             </tr>
             </table>
             
 <p><strong>Note:</strong> The following loglevels were omitted in this report: SKIP, INFO, PASS, DEBUG</p>
-<h2>&lt;Section: Google Fonts&gt; 🔥🔥🔥🔥⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
-<h3>Check Google Fonts glyph coverage.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/glyph_coverage&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Missing required codepoints:</p>
-<pre><code>- 0x00AF (MACRON)
-</code></pre>
-<p>[code: missing-codepoints]</p>
-</span></li></ul></div></details>
-<h3>Check copyright namerecords match license file.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/name/license&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>License file OFL.txt exists but NameID 13 (LICENSE DESCRIPTION) value on platform 3 (WINDOWS) is not specified for that. Value was: &quot;This Font Software is licensed under the SIL Open Font License, Version 1.1. This Font Software is distributed on an &quot;AS IS&quot; BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the SIL Open Font License for the specific language, permissions and limitations governing your use of this Font Software.&quot; Must be changed to &quot;This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: https://scripts.sil.org/OFL&quot; [code: wrong]</p>
-</span></li></ul></div></details>
-<h3>Copyright notices match canonical pattern in fonts</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/font_copyright&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Name Table entry: Copyright notices should match a pattern similar to: &quot;Copyright 2019 The Familyname Project Authors (git url)&quot;
-But instead we have got:
-&quot;Copyright 2018-2021 Google Inc. All Rights Reserved.&quot; [code: bad-notice-format]</p>
-</span></li></ul></div></details>
-<h3>OS/2.fsSelection bit 7 (USE_TYPO_METRICS) is set in all fonts.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/os2/use_typo_metrics&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.fsSelection bit 7 (USE_TYPO_METRICS) wasNOT set in the following fonts: ['fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf']. [code: missing-os2-fsselection-bit7]</p>
-</span></li></ul></div></details>
+<h2>&lt;Section: Google Fonts&gt; ⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Ensure fonts have ScriptLangTags declared on the 'meta' table.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/meta/script_lang_tags&gt;</div>
 
@@ -133,9 +108,9 @@ But instead we have got:
 <details><summary>⚠️ <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs could not be reached by codepoint or substitution rules:</p>
 <pre><code>- emdash
 
-- uni00A0.1 
+- endash 
 
-- And endash
+- And uni00A0.1
 </code></pre>
 <p>[code: unreachable-glyphs]</p>
 </span></li></ul></div></details>
@@ -158,32 +133,29 @@ But instead we have got:
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/dotted_circle&gt;</div>
 
 <details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs could not be attached to the dotted circle glyph:</p>
-<pre><code>- u112E8
+<pre><code>- acutecomb
 
-- u112E9
+- gravecomb
 
-- u112E5
-
-- u112EA
-
-- u112E3
-
-- u112E7
+- tildecomb
 
 - u112DF
 
-- u112E4 
+- u112E3
 
-- And u112E6 [code: unattached-dotted-circle-marks]
+- u112E4
+
+- u112E5
+
+- u112E6
+
+- u112E7
+
+- u112E8 
+
+- And 14 more.
 </code></pre>
-</span></li></ul></div></details>
-<h2>&lt;Section: fontbakery.profiles.gdef&gt; ⚠️</h2>
-<h3>Check mark characters are in GDEF mark glyph class.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/gdef_mark_chars&gt;</div>
-
-<details><summary>⚠️ <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following mark characters could be in the GDEF mark glyph class:
-acutecomb (U+0301), gravecomb (U+0300), tildecomb (U+0303), uni0302 (U+0302), uni0304 (U+0304), uni0306 (U+0306), uni0307 (U+0307), uni0308 (U+0308), uni030A (U+030A), uni030B (U+030B) and 5 more.</p>
-<p>Use -F or --full-lists to disable shortening of long lists. [code: mark-chars]</p>
+<p>Use -F or --full-lists to disable shortening of long lists. [code: unattached-dotted-circle-marks]</p>
 </span></li></ul></div></details>
 <h2>&lt;Section: Outline Correctness Checks&gt; ⚠️</h2>
 <h3>Are any segments inordinately short?</h3>
