--- a/fontbakery/googlefonts-NotoSansKhudawadi-report.html
+++ b/fontbakery/googlefonts-NotoSansKhudawadi-report.html
@@ -73,19 +73,19 @@
             </tr>
             <tr>
                 <td>0</td>
-                <td>2</td>
+                <td>0</td>
                 <td>4</td>
                 <td>110</td>
                 <td>7</td>
-                <td>104</td>
+                <td>106</td>
             </tr>
             <tr>
                 <td>0%</td>
-                <td>1%</td>
+                <td>0%</td>
                 <td>2%</td>
                 <td>65%</td>
                 <td>4%</td>
-                <td>62%</td>
+                <td>63%</td>
             </tr>
             </table>
             
@@ -96,12 +96,7 @@
 
 <details><summary>⚠️ <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>This font file does not have a 'meta' table. [code: lacks-meta-table]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: Universal&gt; 🔥🔥⚠️⚠️⏩⏩⏩⏩ℹ️ℹ️</h2>
-<h3>Checking OS/2 usWinAscent & usWinDescent.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/family/win_ascent_and_descent&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2.usWinAscent value should be equal or greater than 995, but got 944 instead [code: ascent]</p>
-</span></li></ul></div></details>
+<h2>&lt;Section: Universal&gt; ⚠️⚠️⏩⏩⏩⏩ℹ️ℹ️</h2>
 <h3>Check font contains no unreachable glyphs</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/unreachable_glyphs&gt;</div>
 
@@ -128,34 +123,6 @@
 - And Glyph name: uogonek	Contours detected: 2	Expected: 1
 </code></pre>
 <p>[code: contour-count]</p>
-</span></li></ul></div></details>
-<h3>Ensure dotted circle glyph is present and can attach marks.</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/dotted_circle&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs could not be attached to the dotted circle glyph:</p>
-<pre><code>- acutecomb
-
-- gravecomb
-
-- tildecomb
-
-- u112DF
-
-- u112E3
-
-- u112E4
-
-- u112E5
-
-- u112E6
-
-- u112E7
-
-- u112E8 
-
-- And 14 more.
-</code></pre>
-<p>Use -F or --full-lists to disable shortening of long lists. [code: unattached-dotted-circle-marks]</p>
 </span></li></ul></div></details>
 <h2>&lt;Section: Outline Correctness Checks&gt; ⚠️</h2>
 <h3>Are any segments inordinately short?</h3>
