deploy: 9e21e922af7ee73cef6cb9d1d024bcc7c0556c89

--- a/proof/text.html
+++ b/proof/text.html
@@ -146,13 +146,11 @@
 </h2>
 	
   
-      <div class="box">
-	<div class="box-title">Noto-Sans-Khudawadi-Regular 14pt</div>
-	<span class="Noto-Sans-Khudawadi-Regular" style="font-size: 14pt">
-	  । — –
-          </span>
-       </div>
-    
+    <div class="box">
+      <div class="box-title">Noto-Sans-Khudawadi-Regular 14pt</div>
+      <div dir="auto" class="Noto-Sans-Khudawadi-Regular" style="font-size: 14pt">। — – 𑋝𑋙𑋛𑋗 𑋑𑋞 𑋘𑋍𑋪𑋙 𑋂𑊼𑋍𑋡 𑋜𑋠𑋑𑋪𑋍𑋡𑋑𑋪𑋘𑋠𑋘𑋝𑋪𑋛𑋠𑋍𑋑𑋪𑋍𑋪𑋙𑋪𑋘𑋠𑋌𑋠𑋟 𑊱𑋐𑋠𑋙𑋞𑋪 𑋗𑋠𑋑𑋛𑋒𑋙𑋡𑋛𑋠𑋙𑋝𑋪𑋘 𑋝𑋙𑋪𑋛𑋥𑋜𑋩𑋠𑋗𑋒𑋡 𑋝𑋗𑋣𑋍𑋪𑋒𑋑𑋪𑋑𑋠𑋞𑋪 𑊰𑋒𑋡 𑊼𑋨𑋙𑋛𑋏𑋪𑋙𑋡𑋜𑋠 𑊰𑋐𑋡𑊺𑋠𑋙𑋏𑋪𑋙𑋡𑋜𑋠 𑋀 𑊶𑋛 𑊰𑋖𑋡𑊾𑋧𑋜𑋩𑋌𑋠𑋘𑋠𑋟 𑋒𑋙𑋠𑋐𑋢𑋑𑋍𑋪𑋛𑋥𑋑 𑊰𑋑𑋣𑋂𑋪𑋅𑋠𑋝𑋪𑋘𑋍𑋥। 𑋒𑋤𑋙𑋪𑋌𑋙𑋤𑋒𑋥𑋌 𑋝𑋪𑋎𑋠𑋝𑋪𑋘𑋍𑋡। 𑋑𑋡𑋙𑋪𑋏𑋡𑋜𑋩𑋪𑋆𑋠𑋞𑋪 𑋛𑋡𑋑𑋦𑋛 𑋔𑋑𑋪𑋐𑋣𑋍𑋪𑋛𑋖𑋠𑋛𑋑𑋘𑋠 𑋏𑋌𑋪𑋈𑋟</span>
+    </div>
+  
 
     </div>
 </body>
