--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/khudawadi/commit/6ddd3f3
-"><code>6ddd3f3
+					<a href="https://github.com/notofonts/khudawadi/commit/9e21e92
+"><code>9e21e92
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">। — – । — –</h1>
+			<h1 class="display-3 heading noto">। — – 𑋝𑋙𑋛𑋗 𑋑𑋞 𑋘𑋍𑋪𑋙 𑋂𑊼𑋍𑋡 𑋜𑋠𑋑𑋪𑋍𑋡𑋑𑋪𑋘𑋠𑋘𑋝𑋪𑋛𑋠𑋍𑋑𑋪𑋍𑋪𑋙𑋪𑋘𑋠𑋌𑋠𑋟 𑊱𑋐𑋠𑋙𑋞𑋪 𑋗𑋠𑋑𑋛𑋒𑋙𑋡𑋛𑋠𑋙𑋝𑋪𑋘 𑋝𑋙𑋪𑋛𑋥𑋜𑋩𑋠𑋗𑋒𑋡 𑋝𑋗𑋣𑋍𑋪𑋒𑋑𑋪𑋑𑋠𑋞𑋪 𑊰𑋒𑋡 𑊼𑋨𑋙𑋛𑋏𑋪𑋙𑋡𑋜𑋠 𑊰𑋐𑋡𑊺𑋠𑋙𑋏𑋪𑋙𑋡𑋜𑋠 𑋀 𑊶𑋛 𑊰𑋖𑋡𑊾𑋧𑋜𑋩𑋌𑋠𑋘𑋠𑋟 𑋒𑋙𑋠𑋐𑋢𑋑𑋍𑋪𑋛𑋥𑋑 𑊰𑋑𑋣𑋂𑋪𑋅𑋠𑋝𑋪𑋘𑋍𑋥। 𑋒𑋤𑋙𑋪𑋌𑋙𑋤𑋒𑋥𑋌 𑋝𑋪𑋎𑋠𑋝𑋪𑋘𑋍𑋡। 𑋑𑋡𑋙𑋪𑋏𑋡𑋜𑋩𑋪𑋆𑋠𑋞𑋪 𑋛𑋡𑋑𑋦𑋛 𑋔𑋑𑋪𑋐𑋣𑋍𑋪𑋛𑋖𑋠𑋛𑋑𑋘𑋠 𑋏𑋌𑋪𑋈𑋟 । — – 𑋝𑋙𑋛𑋗 𑋑𑋞 𑋘𑋍𑋪𑋙 𑋂𑊼𑋍𑋡 𑋜𑋠𑋑𑋪𑋍𑋡𑋑𑋪𑋘𑋠𑋘𑋝𑋪𑋛𑋠𑋍𑋑𑋪𑋍𑋪𑋙𑋪𑋘𑋠𑋌𑋠𑋟 𑊱𑋐𑋠𑋙𑋞𑋪 𑋗𑋠𑋑𑋛𑋒𑋙𑋡𑋛𑋠𑋙𑋝𑋪𑋘 𑋝𑋙𑋪𑋛𑋥𑋜𑋩𑋠𑋗𑋒𑋡 𑋝𑋗𑋣𑋍𑋪𑋒𑋑𑋪𑋑𑋠𑋞𑋪 𑊰𑋒𑋡 𑊼𑋨𑋙𑋛𑋏𑋪𑋙𑋡𑋜𑋠 𑊰𑋐𑋡𑊺𑋠𑋙𑋏𑋪𑋙𑋡𑋜𑋠 𑋀 𑊶𑋛 𑊰𑋖𑋡𑊾𑋧𑋜𑋩𑋌𑋠𑋘𑋠𑋟 𑋒𑋙𑋠𑋐𑋢𑋑𑋍𑋪𑋛𑋥𑋑 𑊰𑋑𑋣𑋂𑋪𑋅𑋠𑋝𑋪𑋘𑋍𑋥। 𑋒𑋤𑋙𑋪𑋌𑋙𑋤𑋒𑋥𑋌 𑋝𑋪𑋎𑋠𑋝𑋪𑋘𑋍𑋡। 𑋑𑋡𑋙𑋪𑋏𑋡𑋜𑋩𑋪𑋆𑋠𑋞𑋪 𑋛𑋡𑋑𑋦𑋛 𑋔𑋑𑋪𑋐𑋣𑋍𑋪𑋛𑋖𑋠𑋛𑋑𑋘𑋠 𑋏𑋌𑋪𑋈𑋟</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -68,6 +68,11 @@
 				
 				<h4>Noto Sans Khudawadi</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">unhinted<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansKhudawadi/unhinted/ttf/NotoSansKhudawadi-Regular.ttf"> NotoSansKhudawadi-Regular.ttf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">full<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansKhudawadi/full/ttf/NotoSansKhudawadi-Regular.ttf"> NotoSansKhudawadi-Regular.ttf</a></li>
@@ -76,11 +81,6 @@
 <li class="li-0">googlefonts<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansKhudawadi/googlefonts/ttf/NotoSansKhudawadi-Regular.ttf"> NotoSansKhudawadi-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">unhinted<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansKhudawadi/unhinted/ttf/NotoSansKhudawadi-Regular.ttf"> NotoSansKhudawadi-Regular.ttf</a></li>
  </ul>
  </ul>
 <li class="li-0">hinted<ul>
@@ -110,6 +110,9 @@
 									</ul>
 
 				<ul>
+										<li>
+						<a href="qa/NotoSansKhudawadi/Diffenator/Regular/report.html">Diffenator report, Regular</a>
+					</li>
 									</ul>
 				
 				<h3>Proof sheets</h3>
